@@ -127,6 +127,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 <tr><td class="wiki"> sort-function </td><td class="wiki"> The algorithm to use when sorting </td><td class="wiki"> <code>0</code>, <code>1</code>, <code>2</code> (ASCII, strnatcmp, strcasenatcmp) </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-header-active </td><td class="wiki"> Active state of column header(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
 <tr><td class="wiki"> column-visible </td><td class="wiki"> Visible state of column(s) </td><td class="wiki"> <i>state0</i> <code>|</code> <i>state1</i> <code>|</code> ... </td><td class="wiki"> 0.8.1 </td></tr>
+<tr><td class="wiki"> freeze-thaw </td><td class="wiki"> Freeze rendering whilst loading data </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> 0.8.1 </td></tr>
 </table>
 
 <h2> Directives </h2>
@@ -235,7 +236,7 @@ A <a href="http://developer.gnome.org/gtk/2.24/GtkCList.html">GtkCList</a> packe
 						<td>
 							<table width="100%" cellpadding="0px" cellspacing="0px">
 								<tr>
-									<td class="footer" width="33%" align="center">2012-09-04 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
+									<td class="footer" width="33%" align="center">2012-09-05 <a href="mailto:thunorsif@hotmail.com">Thunor</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://code.google.com/p/gtkdialog/">Project Page</a></td>
 									<td class="footer" width="33%" align="center"><a href="http://www.murga-linux.com/puppy/viewtopic.php?t=69188">Development Thread</a></td>
 								</tr>
